done for the day

--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -23,7 +23,7 @@
             </div>
             <div class="row mb-3">
                 <div class="col-md-8 forgot-password">
-                    <%= link_to "Forgot Password?", 'users#forgot' %><!-- change this later, also in signup for partial -->
+                    <%= link_to "Forgot Password?", new_password_reset_path %><!-- change this later, also in signup for partial -->
                 </div>
                 <div class="col-md-4 sign-up">
                     <%= link_to "Sign up now!", signup_path %>
