--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #000000;">
-    <%= link_to 'SocialNetworker', '/', class: 'navbar-brand'%>
+    <%= link_to 'SocialNetwork', '/', class: 'navbar-brand'%>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,7 +42,7 @@
                         <%= e.submit "Log in", class: "btn btn-success btn-block" %>
                         <div class="dropdown-divider"></div>
                         <div class="text-center forgot-password mb-2">
-                            <%= link_to "Forgot Password?", 'users#forgot' %><!-- change this later, also in signup for partial -->
+                            <%= link_to "Forgot Password?", new_password_reset_path %><!-- change this later, also in signup for partial -->
                         </div>
                     <% end %>
                 </ul>
