--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -1,5 +1,5 @@
 $('#posts').append('<%= j render(@microposts) %>');
-<% if @products.next_page %>
+<% if @microposts.next_page %>
   $('.pagination').replaceWith('<%= j will_paginate(@microposts) %>');
 <% else %>
   $('.pagination').remove();
