--- a/app/views/shared/_new_comment.html.erb
+++ b/app/views/shared/_new_comment.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@comment, remote: true) do |f| %>
     <div class="form-group m-3">    
         <%= f.text_area :content, class: "form-control mb-2" %>
-        <%= f.submit "Post", class: "btn btn-info" %>
+        <%= f.submit "Post", class: "btn btn-warning" %>
     </div>
 <% end %>
