--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'components/profile_stats'%>
+<!--<%= render 'components/profile_stats'%>-->
 <div class="container">
   <% provide(:title, " | #{@user.username}") %>
   <%= render 'shared/error_messages' %>
@@ -10,6 +10,7 @@
               <%= render 'components/profile_status'%>
               <%= render 'components/profile_music_player'%>
               <%= render 'components/profile_comments'%>
+              <%= render 'components/profile_show_comments'%>
           </div>
       </div>
 </div>
