--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -73,13 +73,11 @@
 <% else %>
 <div class="container">
     <div class="row mt-3">
+        <h3>Activity Feed</h3>
         <div class="col-3 position-sticky">
             <%= render 'components/profile_intro'%>
         </div>
         <div class="col-9">
-            <section class="micropost_form">
-                <%= render 'shared/new_micropost' %>
-            </section>
             <section class="micropost_feed mb-2">
                 <%= render 'shared/feed'%>
             </section>
