--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,7 @@
       <div class="row mt-4">
           <div class="col-3">
               <%= render 'components/profile_intro' %>
+              <%= render 'components/profile_contact'%>
           </div>
           <div class="col-9">
               <%= render 'components/profile_status'%>
